# downgrade-patcher

./: .gitignore  Dockerfile  docker-compose.yml  games.json  pyproject.toml
.github/workflows/: build-static-qt.yml  client-build.yml  server-tests.yml
cli/: pyproject.toml
cli/src/downgrade_patcher/: cli.py  manifest.py
cli/tests/: test_cli.py  test_config.py  test_hashing.py  test_manifest.py  test_store.py
client/: xmake.lua
client/resources/: resources.qrc
client/src/: main.cpp
client/src/api/: ApiClient.cpp  ApiClient.h  types.h
client/src/engine/: GameScanner.cpp  GameScanner.h  HashCache.cpp  HashCache.h  (+4 more)
client/tests/: test_api_client.h  test_game_scanner.h  test_hash_cache.h  test_main.cpp  test_main.h  test_patcher.h  test_steam_detector.h
common/: pyproject.toml
common/src/downgrade_common/: cache.py  chunking.py  config.py  hashing.py
common/tests/: test_cache.py  test_chunking.py  test_config.py  test_hashing.py
scripts/: download-all-skyrim.sh  generate-manifests.py  integration-test.py
server/: pyproject.toml
server/src/patch_server/: __main__.py  app.py  patch_gen.py  settings.py  store_reader.py
server/src/patch_server/routes/: games.py  manifests.py  patches.py
server/tests/: conftest.py  test_patch_gen.py  test_routes_games.py  test_routes_manifests.py  test_routes_patches.py  test_store_reader.py
src/downgrade_patcher/: __init__.py  cli.py  depot.py  hashing.py  manifest.py  store.py
tests/: conftest.py  test_cli.py  test_config.py  test_depot.py  test_hashing.py  test_manifest.py
unraid/: downgrade-patcher.xml
(+14 files in other folders)
