[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "downgrade-patcher"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "xxhash>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-tmp-files>=0.0.1",
]

[project.scripts]
downgrade-tool = "downgrade_patcher.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/downgrade_patcher"]
