[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "downgrade-common"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "xxhash>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/downgrade_common"]
