[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "downgrade-patcher-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic-settings>=2.0",
    "downgrade-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/patch_server"]
